--- a/app/views/refinery/members/admin/items/_form.html.erb
+++ b/app/views/refinery/members/admin/items/_form.html.erb
@@ -62,7 +62,7 @@
   
   <div class='field'>
     <%= f.label :born_at -%>
-    <%= f.datetime_select :born_at, :start_year => 1900  -%>
+    <%= f.datetime_select :born_at, start_year: 1900, include_blank: true  -%>
 
   </div>
   
@@ -75,6 +75,11 @@
   <div class='field'>
     <%= f.label :group_id -%>
     <%= f.collection_select(:group_id, Refinery::Members::Group.all, :id, :name) -%>
+  </div>
+
+  <div class='field'>
+    <%= f.label :user_id -%>
+    <%= f.collection_select(:group_id, Refinery::User.all, :id, :username, include_blank: true) -%>
   </div>
 
   <%= render :partial => '/refinery/admin/tabbed_fields',
