--- a/app/views/refinery/members/admin/items/_form.html.erb
+++ b/app/views/refinery/members/admin/items/_form.html.erb
@@ -79,7 +79,7 @@
 
   <div class='field'>
     <%= f.label :user_id -%>
-    <%= f.collection_select(:group_id, Refinery::User.all, :id, :username, include_blank: true) -%>
+    <%= f.collection_select(:user_id, Refinery::User.all, :id, :username, include_blank: true) -%>
   </div>
 
   <%= render :partial => '/refinery/admin/tabbed_fields',
