--- a/app/views/refinery/members/admin/profiles/_form.html.erb
+++ b/app/views/refinery/members/admin/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [refinery, :members_admin, @item], :url => members_admin_profile_path do |f| -%>
+<%= form_for [refinery, :members_admin, @item], :url => refinery.members_admin_profile_path do |f| -%>
   <%= render '/refinery/admin/error_messages',
               :object => @item,
               :include_object_name => true %>
