profile edit, additional fields

--- a/app/views/refinery/members/admin/items/_form.html.erb
+++ b/app/views/refinery/members/admin/items/_form.html.erb
@@ -84,7 +84,7 @@
 
   <%= render :partial => '/refinery/admin/tabbed_fields',
            :locals => { :f => f,
-                        :tabbed_fields => [:studies, :languages, :education, :research, :conferences, :publications, :awards] } %>
+                        :tabbed_fields => [:studies, :languages, :actual_education, :education, :research, :conferences, :publications, :awards] } %>
 
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => true,
